welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: illegal start of simple expression
	 if (isAsleep)) 
                      ^